public/stylesheets/css/chat.css
html, body {
  height: 100%;
}
* { margin: 0; padding: 0; box-sizing: border-box; }
body { font: 13px Helvetica, Arial; }
form { background: #000; padding: 3px; width: 100%; }
form input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
#messages { list-style-type: none; margin: 0; padding: 0; }
#messages li { padding: 5px 10px; }

.chatWrapper {
  height: 100%;
  width: 100%;
  display: flex;
  flex-direction: column;
}

#headBar {
  width: 100%;
  height: 4em;
  background-color: #000;
  border: solid black 1px;
  border-radius: 0;
  padding: 0;
  margin: 0;
}
#contentWrapper {
  flex: 1;
}
.chatPage {
  height: 100%;
  display: flex;
  flex-direction: column;
}
.hidden {
  display: none;
}
.close {
  height: 4em;
  position: fixed;
  bottom: 0;
  width: 100%;
}
#messagewrapper {
  overflow-y: auto;
  flex: 1;
}

.loginPage {
  height: 100%;
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: #000;
  margin: 0;
}

.userNameInput {
  font-size: 2em;
  width: 20em;
  height: 2em;
  background: #000;
  color: white;
  border: none;
  border-bottom: solid blue 3px;
  outline: none;
}
.userNameInput::placeholder {
  color: white;
}

.userWritten {
  background: blue;
  color: white;
}

.othersWritten {
  background: #fff;
  color: black;
}

